tests/query_errors/pp_unrecognized_token3/error.txt
Error: 
    1 | use foo :: as;
      |            ^^ Found the token `as` but expected `<ident>`
    2 |
